--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a target="_blank" id="socialicon-1" href="https://linkedin.com/jasonsu">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com/jasonsu">
+          <a target="_blank" id="socialicon-2" href="https://github.com/jj331.github.io">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com/jasonsu">
